--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,3 +7,5 @@ phrases:
   fixation: "§fFixation"
   fixed: "§aFixed"
   unfixed: "§cUnfixed"
+  functions: "Functions"
+  button-simulation: "§fButton Simulation"
