+ 1.17.1 support + https://www.spigotmc.org/threads/reframe-advanced-itemframe-plugin-1-17.497894/#post-4222522

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,7 @@
 permissions:
   visibility: "reframe.toggle.visibility"
   fixation: "reframe.toggle.fixation"
+  clickthrough: "reframe.clickthrough"
 phrases:
   menu: "Menu"
   visibility: "§fVisibility"
